--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@auth0/auth0-angular": "^2.2.3",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
-
     "ag-grid-angular": "^31.3.2",
     "ag-grid-community": "^31.3.2",
     "ag-grid-enterprise": "^31.3.2",
