update production config

--- a/angular.json
+++ b/angular.json
@@ -17,12 +17,15 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/gordon-qa",
+            "outputPath": {
+              "base": "dist/gordon-qa",
+              "browser": ""
+            },
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js",
-            "@angular/localize/init"
+              "@angular/localize/init"
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
